<resources>
    <string name="app_name">Loan Alert</string>

    <string name="label_login_field">Login</string>
    <string name="label_password_field">Senha</string>
    <string name="label_login_button">Login</string>
    <string name="label_register_button">Cadastrar</string>
    <string name="label_recover_button">Recuperar senha</string>

    <string name="label_register_actiity">Cadastrar nova conta</string>
    <string name="label_name_field">Nome</string>
    <string name="label_id_number_field">Matrícula</string>
    <string name="label_institution_field">Instituição</string>
    <string name="label_email_field">Email</string>
    <string name="label_password_confirmation_field">Confirmação de senha</string>

    <string name="label_new_loan_entry_activity">Cadastrar novo ítem</string>
    <string name="label_edit_loan_entry_activity">Editar ítem</string>
    <string name="label_title_field">Título</string>
    <string name="label_observations_field">Observações</string>
    <string name="label_creation_date_field">Data de criação</string>
    <string name="label_due_date_field">Data de entrega</string>
    <string name="label_save_button">Salvar</string>
    <string name="action_loan_entry_reset">Resetar</string>
    <string name="action_loan_entry_remove">Remover</string>
    <string name="notification_item_must_be_returned">Esse ítem precisa ser devolvido!</string>
    <string name="action_my_loans_search">Pesquisar</string>
    <string name="title_activity_login_">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>

