<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:marqueeto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufcg.es.loanalert.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/register_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_id_number_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/register_institution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_institution_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_email_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/register_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password_confirmation_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_register_button"/>

    </LinearLayout>

</ScrollView>
