<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:marqueeto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufcg.es.loanalert.LoanEntryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/loan_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_title_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/loan_entry_observations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_observations_field"
            marqueeto:iconGravity="right"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/loan_entry_creation_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_creation_date_field"
                marqueeto:iconGravity="right"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

            <View
                android:id="@+id/loan_entry_creation_date_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/loan_entry_creation_date"
                android:layout_alignBottom="@+id/loan_entry_creation_date"
                android:clickable="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/loan_entry_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_due_date_field"
                marqueeto:iconGravity="right"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

            <View
                android:id="@+id/loan_entry_due_date_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/loan_entry_due_date"
                android:layout_alignBottom="@+id/loan_entry_due_date"
                android:clickable="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/loan_entry_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_save_button"/>

    </LinearLayout>

</ScrollView>
